# someExample

./: LICENSE  README.md
cxx_demo/: obj_demo.cpp
design_patterns/abstract_factory/: Cargo.toml
design_patterns/abstract_factory/src/gui/src/: lib.rs
design_patterns/abstract_factory/src/mac_gui/: Cargo.toml
design_patterns/abstract_factory/src/windows_gui/: Cargo.toml
design_patterns/abstract_factory/src/windows_gui/src/: lib.rs
design_patterns/factory_method/src/: gui.rs  html_gui.rs  init.rs  main.rs  new_gui.rs  windows_gui.rs
rust/enum_test/src/: main.rs
rust/hello_world/src/: main.rs
rust/life/src/: main.rs
